--- a/index.html
+++ b/index.html
@@ -1,57 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <title>Did Leonie eat her 5-a-day ???</title>
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            overflow: hidden;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Did Leonie eat her 5-a-day ???</title>
+  <link rel="apple-touch-icon" href="icon.png">
+  <style>
+    html, body {
+      font-family: "Times New Roman", Times, serif;
+      margin: 0;
+      padding: 0;
+      background-color: #050A30;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .banner {
+      background-color: #050A30;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      font-size: 1.5em;
+      font-weight: bold;
+      border-bottom: 2px solid #fff;
+    }
+
+    .progress-tracker {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: calc(100% - 72px); /* subtract the banner height and border */
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .word-count-boxes {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(5, 1fr);
+      gap: 10px;
+      width: 100%;
+      height: 100%;
+    }
+
+    .checkbox-row {
+      width: 100%;
+      height: 100%;
+    }
+
+    input[type="checkbox"] {
+      display: none;
+    }
+
+    input[type="checkbox"] + label {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      background-image: url('sad.png');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      font-size: 1.2em;
+      border: 2px solid white;
+      border-radius: 10px;
+      box-sizing: border-box;
+      cursor: pointer;
+      text-align: center;
+      padding: 10px;
+    }
+
+    input[type="checkbox"]:checked + label {
+      background-image: url('happy.png');
+      color: white;
+    }
+
+    /* Responsive adjustments */
+    @media screen and (max-width: 600px) {
+      .banner {
+        font-size: 1.2em;
+        padding: 15px;
+      }
+      input[type="checkbox"] + label {
+        font-size: 1em;
+        padding: 8px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="progress-tracker">
-        <div class="word-count">
-            <div class="word-count-boxes">
-                <div class="checkbox-row">
-                    <input type="checkbox" id="1" unchecked><label for="1">1 veggie!!!</label>
-                </div>
-                <div class="checkbox-row">
-                    <input type="checkbox" id="2" unchecked><label for="2">2 veggies!!!</label>
-                </div>
-                <div class="checkbox-row">
-                    <input type="checkbox" id="3" unchecked><label for="3">3 veggies!!!</label>
-                </div>
-                <div class="checkbox-row">
-                    <input type="checkbox" id="4" unchecked><label for="4">4 veggies!!!</label>
-                </div>
-                <div class="checkbox-row">
-                    <input type="checkbox" id="5" unchecked><label for="5">5 veggies!!!</label>
-                </div>
-            </div>
-        </div>
+  <div class="banner">Did Leonie eat her 5-a-day ???</div>
+  <div class="progress-tracker">
+    <div class="word-count-boxes">
+      <div class="checkbox-row">
+        <input type="checkbox" id="1">
+        <label for="1">1 veggie!!!</label>
+      </div>
+      <div class="checkbox-row">
+        <input type="checkbox" id="2">
+        <label for="2">2 veggies!!!</label>
+      </div>
+      <div class="checkbox-row">
+        <input type="checkbox" id="3">
+        <label for="3">3 veggies!!!</label>
+      </div>
+      <div class="checkbox-row">
+        <input type="checkbox" id="4">
+        <label for="4">4 veggies!!!</label>
+      </div>
+      <div class="checkbox-row">
+        <input type="checkbox" id="5">
+        <label for="5">5 veggies!!!</label>
+      </div>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
-            checkboxes.forEach(function(checkbox) {
-                const checkboxId = checkbox.getAttribute('id');
-                const checked = localStorage.getItem(checkboxId) === 'true';
-                checkbox.checked = checked;
-            });
+  </div>
 
-            checkboxes.forEach(function(checkbox) {
-                checkbox.addEventListener('change', function() {
-                    const checkboxId = checkbox.getAttribute('id');
-                    localStorage.setItem(checkboxId, checkbox.checked);
-                });
-            });
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+      checkboxes.forEach(function(checkbox) {
+        const checkboxId = checkbox.getAttribute('id');
+        const checked = localStorage.getItem(checkboxId) === 'true';
+        checkbox.checked = checked;
+      });
+
+      checkboxes.forEach(function(checkbox) {
+        checkbox.addEventListener('change', function() {
+          const checkboxId = checkbox.getAttribute('id');
+          localStorage.setItem(checkboxId, checkbox.checked);
         });
-    </script>
+      });
+    });
+  </script>
 </body>
 </html>
